--- a/zach_pipeline.ipynb
+++ b/zach_pipeline.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "2e3b6514-ae47-4e20-8172-4cfc8aa40389",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.594550Z",
-     "start_time": "2024-02-20T20:02:15.544005Z"
+     "end_time": "2024-02-21T02:38:57.169147Z",
+     "start_time": "2024-02-21T02:38:53.994615Z"
     }
    },
    "outputs": [],
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "4ea92e77-5b4a-44d3-8013-6038ab14f368",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.611265Z",
-     "start_time": "2024-02-20T20:02:15.602816Z"
+     "end_time": "2024-02-21T02:39:24.686068Z",
+     "start_time": "2024-02-21T02:39:24.680636Z"
     }
    },
    "outputs": [],
@@ -76,32 +76,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "fa10f19e-5c92-4277-9981-1f895d0d51f1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.642489Z",
-     "start_time": "2024-02-20T20:02:15.616779Z"
+     "end_time": "2024-02-21T02:39:51.614955Z",
+     "start_time": "2024-02-21T02:39:51.597119Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<module 'src.pipeline.prepare_data_component' from '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/src/pipeline/prepare_data_component.py'>"
+      "text/plain": "<module 'src.pipeline.zach_prepare_data_component' from '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/src/pipeline/zach_prepare_data_component.py'>"
      },
-     "execution_count": 82,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.pipeline import prepare_data_component\n",
+    "from src.pipeline import zach_prepare_data_component\n",
     "#from src_v1.pipeline import bqml_component\n",
     "#from src_v1.pipeline import custom_model_component\n",
     "#from src_v1.pipeline import model_selection_component\n",
     "\n",
-    "importlib.reload(prepare_data_component)\n",
+    "importlib.reload(zach_prepare_data_component)\n",
     "#importlib.reload(bqml_component)\n",
     "#importlib.reload(custom_model_component)\n",
     "#importlib.reload(model_selection_component)"
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "0f50420b-0269-4ba4-9975-4e4f4a491dc1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.643500Z",
-     "start_time": "2024-02-20T20:02:15.633355Z"
+     "end_time": "2024-02-21T02:39:58.858111Z",
+     "start_time": "2024-02-21T02:39:58.841829Z"
     }
    },
    "outputs": [],
@@ -173,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "d1463ba6-acbb-4a5c-97fa-2874a3778764",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.654932Z",
-     "start_time": "2024-02-20T20:02:15.636561Z"
+     "end_time": "2024-02-21T02:40:01.267957Z",
+     "start_time": "2024-02-21T02:40:01.262169Z"
     }
    },
    "outputs": [],
@@ -199,13 +199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "1a9c9292-2240-4218-bd94-cf3fd961b0e8",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.665708Z",
-     "start_time": "2024-02-20T20:02:15.652386Z"
+     "end_time": "2024-02-25T03:55:37.534154Z",
+     "start_time": "2024-02-25T03:55:37.502210Z"
     }
    },
    "outputs": [],
@@ -226,8 +226,12 @@
     "    #from google_cloud_pipeline_components.v1.bigquery import BigqueryExportModelJobOp\n",
     "    #from google_cloud_pipeline_components import aiplatform as gcpc_aip\n",
     "    \n",
+    "    ####\n",
+    "    from google_cloud_pipeline_components.v1.dataset.create_tabular_dataset.component import \\\n",
+    "        tabular_dataset_create as TabularDatasetCreateOp\n",
+    "    \n",
     "    ##################################\n",
-    "    data_preparing_task = prepare_data_component.bq_table_prep_op(\n",
+    "    data_preparing_task = zach_prepare_data_component.bq_table_prep_op(\n",
     "        project=project,\n",
     "        region=region,\n",
     "        source_bq_table_id=SOURCE_BQ_TABLE_ID,\n",
@@ -235,7 +239,12 @@
     "        limit=LIMIT, \n",
     "    ).set_display_name('prepped-bq-table-create')\n",
     "    \n",
-    "    "
+    "    dataset_create_op = TabularDatasetCreateOp(\n",
+    "        project=project,\n",
+    "        location=region,\n",
+    "        display_name=f\"{APPNAME}-DATASET\",\n",
+    "        bq_source=data_preparing_task.outputs['prepped_data_uri'],\n",
+    "    )"
    ]
   },
   {
@@ -248,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "99c4fc30-b850-4542-b2a0-0e3c3b076f06",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.971093Z",
-     "start_time": "2024-02-20T20:02:15.659354Z"
+     "end_time": "2024-02-25T03:55:41.433700Z",
+     "start_time": "2024-02-25T03:55:41.050700Z"
     }
    },
    "outputs": [],
@@ -267,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "id": "70408218-fe17-4c63-b102-9d3bb48eec96",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.981791Z",
-     "start_time": "2024-02-20T20:02:15.976366Z"
+     "end_time": "2024-02-25T03:55:42.114646Z",
+     "start_time": "2024-02-25T03:55:42.023105Z"
     }
    },
    "outputs": [],
@@ -296,13 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "id": "2b9ccf19-78b7-49e0-b5e6-ec5c42f948cb",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.987730Z",
-     "start_time": "2024-02-20T20:02:15.982929Z"
+     "end_time": "2024-02-25T03:55:43.237002Z",
+     "start_time": "2024-02-25T03:55:43.223109Z"
     }
    },
    "outputs": [],
@@ -312,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "id": "46538bf4-0a85-49ca-bcc5-25dc523144d6",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:16.016396Z",
-     "start_time": "2024-02-20T20:02:15.992148Z"
+     "end_time": "2024-02-25T03:55:43.717749Z",
+     "start_time": "2024-02-25T03:55:43.691733Z"
     }
    },
    "outputs": [],
@@ -345,22 +354,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:16.027972Z",
-     "start_time": "2024-02-20T20:02:16.015623Z"
+     "end_time": "2024-02-25T03:55:44.528976Z",
+     "start_time": "2024-02-25T03:55:44.403681Z"
     }
    },
    "id": "8a2d63c4-d8c2-4016-a437-e0ddcba0f045",
-   "execution_count": 90
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "id": "f2546555-2024-4d5a-8e83-6d76f45b7512",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:03:56.157771Z",
-     "start_time": "2024-02-20T20:02:16.060784Z"
+     "end_time": "2024-02-25T03:57:35.871134Z",
+     "start_time": "2024-02-25T03:55:44.853361Z"
     }
    },
    "outputs": [
@@ -369,20 +378,20 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216\n",
+      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240220140216?project=288906550115\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240224215543?project=288906550115\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob run completed. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216\n"
+      "PipelineJob run completed. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543\n"
      ]
     }
    ],
@@ -400,12 +409,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:03:56.162164Z",
-     "start_time": "2024-02-20T20:03:56.158150Z"
+     "end_time": "2024-02-25T03:57:35.872796Z",
+     "start_time": "2024-02-25T03:57:35.870781Z"
     }
    },
    "id": "aaabc8ef00377061",
-   "execution_count": 91
+   "execution_count": 23
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "41f495af8bc40a50"
   }
  ],
  "metadata": {
