--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "61199b96-ce0f-45f7-ae19-5ee9cf171fbb",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.567177Z",
-     "start_time": "2024-02-20T20:02:15.498850Z"
+     "end_time": "2024-02-25T05:21:27.130990Z",
+     "start_time": "2024-02-25T05:21:27.070115Z"
     }
    },
    "outputs": [],
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "id": "2e3b6514-ae47-4e20-8172-4cfc8aa40389",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.594550Z",
-     "start_time": "2024-02-20T20:02:15.544005Z"
+     "end_time": "2024-02-25T05:21:27.189738Z",
+     "start_time": "2024-02-25T05:21:27.127506Z"
     }
    },
    "outputs": [],
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "id": "4ea92e77-5b4a-44d3-8013-6038ab14f368",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.611265Z",
-     "start_time": "2024-02-20T20:02:15.602816Z"
+     "end_time": "2024-02-25T05:21:27.215837Z",
+     "start_time": "2024-02-25T05:21:27.160739Z"
     }
    },
    "outputs": [],
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "id": "fa10f19e-5c92-4277-9981-1f895d0d51f1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.642489Z",
-     "start_time": "2024-02-20T20:02:15.616779Z"
+     "end_time": "2024-02-25T05:21:27.313013Z",
+     "start_time": "2024-02-25T05:21:27.205344Z"
     }
    },
    "outputs": [
@@ -90,7 +90,7 @@
      "data": {
       "text/plain": "<module 'src.pipeline.prepare_data_component' from '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/src/pipeline/prepare_data_component.py'>"
      },
-     "execution_count": 82,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "id": "0f50420b-0269-4ba4-9975-4e4f4a491dc1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.643500Z",
-     "start_time": "2024-02-20T20:02:15.633355Z"
+     "end_time": "2024-02-25T05:21:27.501314Z",
+     "start_time": "2024-02-25T05:21:27.315845Z"
     }
    },
    "outputs": [],
@@ -173,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "id": "d1463ba6-acbb-4a5c-97fa-2874a3778764",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.654932Z",
-     "start_time": "2024-02-20T20:02:15.636561Z"
+     "end_time": "2024-02-25T05:21:27.528358Z",
+     "start_time": "2024-02-25T05:21:27.348622Z"
     }
    },
    "outputs": [],
@@ -199,13 +199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "id": "1a9c9292-2240-4218-bd94-cf3fd961b0e8",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.665708Z",
-     "start_time": "2024-02-20T20:02:15.652386Z"
+     "end_time": "2024-02-25T05:21:27.619101Z",
+     "start_time": "2024-02-25T05:21:27.382092Z"
     }
    },
    "outputs": [],
@@ -248,13 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "id": "99c4fc30-b850-4542-b2a0-0e3c3b076f06",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.971093Z",
-     "start_time": "2024-02-20T20:02:15.659354Z"
+     "end_time": "2024-02-25T05:21:27.830895Z",
+     "start_time": "2024-02-25T05:21:27.428307Z"
     }
    },
    "outputs": [],
@@ -267,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "id": "70408218-fe17-4c63-b102-9d3bb48eec96",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.981791Z",
-     "start_time": "2024-02-20T20:02:15.976366Z"
+     "end_time": "2024-02-25T05:21:27.849892Z",
+     "start_time": "2024-02-25T05:21:27.836619Z"
     }
    },
    "outputs": [],
@@ -296,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "id": "2b9ccf19-78b7-49e0-b5e6-ec5c42f948cb",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.987730Z",
-     "start_time": "2024-02-20T20:02:15.982929Z"
+     "end_time": "2024-02-25T05:21:27.868517Z",
+     "start_time": "2024-02-25T05:21:27.854653Z"
     }
    },
    "outputs": [],
@@ -312,13 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 102,
    "id": "46538bf4-0a85-49ca-bcc5-25dc523144d6",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:16.016396Z",
-     "start_time": "2024-02-20T20:02:15.992148Z"
+     "end_time": "2024-02-25T05:21:27.996260Z",
+     "start_time": "2024-02-25T05:21:27.952007Z"
     }
    },
    "outputs": [],
@@ -345,22 +345,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:16.027972Z",
-     "start_time": "2024-02-20T20:02:16.015623Z"
+     "end_time": "2024-02-25T05:21:28.005352Z",
+     "start_time": "2024-02-25T05:21:27.998046Z"
     }
    },
    "id": "8a2d63c4-d8c2-4016-a437-e0ddcba0f045",
-   "execution_count": 90
+   "execution_count": 103
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "id": "f2546555-2024-4d5a-8e83-6d76f45b7512",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:03:56.157771Z",
-     "start_time": "2024-02-20T20:02:16.060784Z"
+     "end_time": "2024-02-25T05:23:07.336465Z",
+     "start_time": "2024-02-25T05:21:28.065488Z"
     }
    },
    "outputs": [
@@ -369,20 +369,34 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216\n",
+      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240220140216?project=288906550115\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240224232127?project=288906550115\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob run completed. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240220140216\n"
+      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224232127 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Job failed with:\ncode: 9\nmessage: \"The DAG failed because some tasks failed. The failed tasks are: [bq-table-prep-op].; Job (project_id = babyweight-mlops, job_id = 6751733944166645760) is failed due to the above error.; Failed to handle the job: {project_number = 288906550115, job_id = 6751733944166645760}\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[104], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m response \u001B[38;5;241m=\u001B[39m \u001B[43mpipeline_job\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[43m    \u001B[49m\u001B[43mservice_account\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mSERVICE_ACCOUNT\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      3\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;66;43;03m#sync = True\u001B[39;49;00m\n\u001B[1;32m      4\u001B[0m \u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/envs/39bw/lib/python3.9/site-packages/google/cloud/aiplatform/pipeline_jobs.py:323\u001B[0m, in \u001B[0;36mPipelineJob.run\u001B[0;34m(self, service_account, network, reserved_ip_ranges, sync, create_request_timeout)\u001B[0m\n\u001B[1;32m    301\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Run this configured PipelineJob and monitor the job until completion.\u001B[39;00m\n\u001B[1;32m    302\u001B[0m \n\u001B[1;32m    303\u001B[0m \u001B[38;5;124;03mArgs:\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    319\u001B[0m \u001B[38;5;124;03m        Optional. The timeout for the create request in seconds.\u001B[39;00m\n\u001B[1;32m    320\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    321\u001B[0m network \u001B[38;5;241m=\u001B[39m network \u001B[38;5;129;01mor\u001B[39;00m initializer\u001B[38;5;241m.\u001B[39mglobal_config\u001B[38;5;241m.\u001B[39mnetwork\n\u001B[0;32m--> 323\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_run\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    324\u001B[0m \u001B[43m    \u001B[49m\u001B[43mservice_account\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mservice_account\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    325\u001B[0m \u001B[43m    \u001B[49m\u001B[43mnetwork\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnetwork\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    326\u001B[0m \u001B[43m    \u001B[49m\u001B[43mreserved_ip_ranges\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mreserved_ip_ranges\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    327\u001B[0m \u001B[43m    \u001B[49m\u001B[43msync\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msync\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    328\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcreate_request_timeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcreate_request_timeout\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    329\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/envs/39bw/lib/python3.9/site-packages/google/cloud/aiplatform/base.py:817\u001B[0m, in \u001B[0;36moptional_sync.<locals>.optional_run_in_thread.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    815\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m:\n\u001B[1;32m    816\u001B[0m         VertexAiResourceNounWithFutureManager\u001B[38;5;241m.\u001B[39mwait(\u001B[38;5;28mself\u001B[39m)\n\u001B[0;32m--> 817\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mmethod\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    819\u001B[0m \u001B[38;5;66;03m# callbacks to call within the Future (in same Thread)\u001B[39;00m\n\u001B[1;32m    820\u001B[0m internal_callbacks \u001B[38;5;241m=\u001B[39m []\n",
+      "File \u001B[0;32m~/anaconda3/envs/39bw/lib/python3.9/site-packages/google/cloud/aiplatform/pipeline_jobs.py:366\u001B[0m, in \u001B[0;36mPipelineJob._run\u001B[0;34m(self, service_account, network, reserved_ip_ranges, sync, create_request_timeout)\u001B[0m\n\u001B[1;32m    340\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Helper method to ensure network synchronization and to run\u001B[39;00m\n\u001B[1;32m    341\u001B[0m \u001B[38;5;124;03mthe configured PipelineJob and monitor the job until completion.\u001B[39;00m\n\u001B[1;32m    342\u001B[0m \n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    357\u001B[0m \u001B[38;5;124;03m        Optional. The timeout for the create request in seconds.\u001B[39;00m\n\u001B[1;32m    358\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    359\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msubmit(\n\u001B[1;32m    360\u001B[0m     service_account\u001B[38;5;241m=\u001B[39mservice_account,\n\u001B[1;32m    361\u001B[0m     network\u001B[38;5;241m=\u001B[39mnetwork,\n\u001B[1;32m    362\u001B[0m     reserved_ip_ranges\u001B[38;5;241m=\u001B[39mreserved_ip_ranges,\n\u001B[1;32m    363\u001B[0m     create_request_timeout\u001B[38;5;241m=\u001B[39mcreate_request_timeout,\n\u001B[1;32m    364\u001B[0m )\n\u001B[0;32m--> 366\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_block_until_complete\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/envs/39bw/lib/python3.9/site-packages/google/cloud/aiplatform/pipeline_jobs.py:615\u001B[0m, in \u001B[0;36mPipelineJob._block_until_complete\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    612\u001B[0m \u001B[38;5;66;03m# Error is only populated when the job state is\u001B[39;00m\n\u001B[1;32m    613\u001B[0m \u001B[38;5;66;03m# JOB_STATE_FAILED or JOB_STATE_CANCELLED.\u001B[39;00m\n\u001B[1;32m    614\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_gca_resource\u001B[38;5;241m.\u001B[39mstate \u001B[38;5;129;01min\u001B[39;00m _PIPELINE_ERROR_STATES:\n\u001B[0;32m--> 615\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mJob failed with:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_gca_resource\u001B[38;5;241m.\u001B[39merror)\n\u001B[1;32m    616\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    617\u001B[0m     _LOGGER\u001B[38;5;241m.\u001B[39mlog_action_completed_against_resource(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrun\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcompleted\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28mself\u001B[39m)\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: Job failed with:\ncode: 9\nmessage: \"The DAG failed because some tasks failed. The failed tasks are: [bq-table-prep-op].; Job (project_id = babyweight-mlops, job_id = 6751733944166645760) is failed due to the above error.; Failed to handle the job: {project_number = 288906550115, job_id = 6751733944166645760}\"\n"
      ]
     }
    ],
@@ -400,12 +414,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:03:56.162164Z",
-     "start_time": "2024-02-20T20:03:56.158150Z"
+     "end_time": "2024-02-25T05:23:07.344405Z",
+     "start_time": "2024-02-25T05:23:07.340189Z"
     }
    },
    "id": "aaabc8ef00377061",
-   "execution_count": 91
+   "execution_count": null
   }
  ],
  "metadata": {
