--- a/zach_pipeline.ipynb
+++ b/zach_pipeline.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "61199b96-ce0f-45f7-ae19-5ee9cf171fbb",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-20T20:02:15.567177Z",
-     "start_time": "2024-02-20T20:02:15.498850Z"
+     "end_time": "2024-02-26T23:51:47.253596Z",
+     "start_time": "2024-02-26T23:51:47.057232Z"
     }
    },
    "outputs": [],
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "2e3b6514-ae47-4e20-8172-4cfc8aa40389",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-21T02:38:57.169147Z",
-     "start_time": "2024-02-21T02:38:53.994615Z"
+     "end_time": "2024-02-26T23:51:47.298563Z",
+     "start_time": "2024-02-26T23:51:47.261702Z"
     }
    },
    "outputs": [],
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "4ea92e77-5b4a-44d3-8013-6038ab14f368",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-21T02:39:24.686068Z",
-     "start_time": "2024-02-21T02:39:24.680636Z"
+     "end_time": "2024-02-26T23:51:47.335475Z",
+     "start_time": "2024-02-26T23:51:47.290932Z"
     }
    },
    "outputs": [],
@@ -58,7 +58,7 @@
     "BUCKET = 'mlops_exp_prod_babyweight'\n",
     "APPNAME = \"babyweight\"\n",
     "BQ_DATASET = \"babyweight\"\n",
-    "GOOGLE_APPLICATION_CREDENTIALS = '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/auth/babyweight-mlops-a0f3cc4a4260.json'\n",
+    "GOOGLE_APPLICATION_CREDENTIALS = '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/auth/babyweight-mlops-83ca4aa054f1.json'\n",
     "\n",
     "os.environ[\"REGION\"] = REGION\n",
     "os.environ[\"PROJECT\"] = PROJECT\n",
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "fa10f19e-5c92-4277-9981-1f895d0d51f1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-21T02:39:51.614955Z",
-     "start_time": "2024-02-21T02:39:51.597119Z"
+     "end_time": "2024-02-26T23:51:47.416713Z",
+     "start_time": "2024-02-26T23:51:47.324576Z"
     }
    },
    "outputs": [
@@ -90,7 +90,7 @@
      "data": {
       "text/plain": "<module 'src.pipeline.zach_prepare_data_component' from '/Users/zacharynguyen/Documents/GitHub/End-to-end-MLOps-with-VertexAI/src/pipeline/zach_prepare_data_component.py'>"
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "0f50420b-0269-4ba4-9975-4e4f4a491dc1",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-21T02:39:58.858111Z",
-     "start_time": "2024-02-21T02:39:58.841829Z"
+     "end_time": "2024-02-26T23:51:47.470508Z",
+     "start_time": "2024-02-26T23:51:47.388356Z"
     }
    },
    "outputs": [],
@@ -173,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "d1463ba6-acbb-4a5c-97fa-2874a3778764",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T02:40:01.267957Z",
-     "start_time": "2024-02-21T02:40:01.262169Z"
+     "end_time": "2024-02-26T23:51:47.586813Z",
+     "start_time": "2024-02-26T23:51:47.456663Z"
     }
    },
    "outputs": [],
@@ -199,13 +199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "1a9c9292-2240-4218-bd94-cf3fd961b0e8",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:37.534154Z",
-     "start_time": "2024-02-25T03:55:37.502210Z"
+     "end_time": "2024-02-26T23:51:47.697472Z",
+     "start_time": "2024-02-26T23:51:47.602114Z"
     }
    },
    "outputs": [],
@@ -257,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "99c4fc30-b850-4542-b2a0-0e3c3b076f06",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:41.433700Z",
-     "start_time": "2024-02-25T03:55:41.050700Z"
+     "end_time": "2024-02-26T23:51:48.063894Z",
+     "start_time": "2024-02-26T23:51:47.651711Z"
     }
    },
    "outputs": [],
@@ -276,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "70408218-fe17-4c63-b102-9d3bb48eec96",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:42.114646Z",
-     "start_time": "2024-02-25T03:55:42.023105Z"
+     "end_time": "2024-02-26T23:51:48.066762Z",
+     "start_time": "2024-02-26T23:51:48.035203Z"
     }
    },
    "outputs": [],
@@ -305,13 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2b9ccf19-78b7-49e0-b5e6-ec5c42f948cb",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:43.237002Z",
-     "start_time": "2024-02-25T03:55:43.223109Z"
+     "end_time": "2024-02-26T23:51:48.072406Z",
+     "start_time": "2024-02-26T23:51:48.046057Z"
     }
    },
    "outputs": [],
@@ -321,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "46538bf4-0a85-49ca-bcc5-25dc523144d6",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:43.717749Z",
-     "start_time": "2024-02-25T03:55:43.691733Z"
+     "end_time": "2024-02-26T23:51:48.150048Z",
+     "start_time": "2024-02-26T23:51:48.057705Z"
     }
    },
    "outputs": [],
@@ -354,22 +354,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:55:44.528976Z",
-     "start_time": "2024-02-25T03:55:44.403681Z"
+     "end_time": "2024-02-26T23:51:48.151918Z",
+     "start_time": "2024-02-26T23:51:48.135277Z"
     }
    },
    "id": "8a2d63c4-d8c2-4016-a437-e0ddcba0f045",
-   "execution_count": 22
+   "execution_count": 24
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "f2546555-2024-4d5a-8e83-6d76f45b7512",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:57:35.871134Z",
-     "start_time": "2024-02-25T03:55:44.853361Z"
+     "end_time": "2024-02-26T23:51:55.223836Z",
+     "start_time": "2024-02-26T23:51:48.195608Z"
     }
    },
    "outputs": [
@@ -378,20 +378,12 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543\n",
+      "PipelineJob created. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240226175148\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240226175148')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240224215543?project=288906550115\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob run completed. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240224215543\n"
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/babyweight-20240226175148?project=288906550115\n",
+      "PipelineJob run completed. Resource name: projects/288906550115/locations/us-central1/pipelineJobs/babyweight-20240226175148\n"
      ]
     }
    ],
@@ -409,21 +401,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-25T03:57:35.872796Z",
-     "start_time": "2024-02-25T03:57:35.870781Z"
+     "end_time": "2024-02-26T23:51:55.226954Z",
+     "start_time": "2024-02-26T23:51:55.212111Z"
     }
    },
    "id": "aaabc8ef00377061",
-   "execution_count": 23
+   "execution_count": 25
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-26T23:51:55.285083Z",
+     "start_time": "2024-02-26T23:51:55.226883Z"
+    }
    },
-   "id": "41f495af8bc40a50"
+   "id": "41f495af8bc40a50",
+   "execution_count": 25
   }
  ],
  "metadata": {
